application/kubechart/bend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bend
  template:
    metadata:
      labels:
        app: bend
    spec:
      containers:
        - name: bend
          image: dmogki/bend:v0.0.2 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bend
  namespace: app
spec:
  selector:
    app: bend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
